--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-webflux')
+	compile group: 'com.google.code.gson', name: 'gson', version:'2.7'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
 }
